# duckySigner

./: .editorconfig  .gitignore  .log4brains.yml  README.md  Taskfile.yml  go.mod  go.sum  main.go
.github/workflows/: publish-dc-api-spec.yml  publish-diagrams.yml  publish-log4brains.yml  realease-linux.yml  realease-mac.yml  realease-win.yml  realease-win64.yml
dapp-connect-api/: openapi.yml
dapp-connect-client/js/: .editorconfig  .gitignore  .pnp.cjs  README.md  index.html  package.json  tsconfig.json  vite.config.ts
dapp-connect-client/python/: .gitignore  README.md  main.py  pyproject.toml
dapp-connect-client/python/ducky_connect/: __init__.py  ducky_connect.py  ducky_connect_test.py
diagrams/: nav.json  workspace.json
docs/: readme.md
docs/dapp-connect-api/: openapi.yml  readme.md
docs/decisions/: 20231231-algorand-wallet-for-desktop.md  20231231-build-algorand-desktop-wallet-from-scratch.md  20231231-build-algorand-desktop-wallet.md  20231231-use-log4brains-to-manage-the-adrs.md  20231231-use-markdown-architectural-decision-records.md  20240101-build-using-go-and-typescript.md  20240101-use-wails-ui-framework.md  20240102-use-echo-web-framework.md  20240102-use-local-server-to-connect-to-dapps.md  20240103-use-sqlite-database-to-store-keys.md  20240217-integrate-kmd-wallet-management-code.md  20240217-open-source-under-gnu-agpl3.md  20240218-create-and-maintain-c4-diagrams.md  20240219-document-threat-model.md  20240602-deprioritize-ui-design-and-ux.md  20240603-use-svelte-as-frontend-framework.md  20240821-use-hawk-for-dapp-connect-authentication-and-authorization.md  20240821-use-hawk-for-dapp-connection-authentication-and-authorization.md  20240927-use-memguard-for-preventing-secret-data-in-memory-being-swapped-to-disk.md  20240927-use-memguard.md  (+14 more)
frontend/: .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  eslint.config.js  jest.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
log4brains/: 404.html  index.html
services/: dapp_connect_service.go  dapp_connect_service_test.go  greetservice_test.go  kmd_service.go  kmd_service_test.go  wallet_session.go
(+392 files in other folders)
