[project]
name = "ducky-connect"
version = "0.0.0"
description = "Library for connecting to DuckySigner wallet"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.3",
    "keyring>=25.7.0",
    "mohawk>=1.1.0",
    "py-algorand-sdk>=2.11.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-check>=2.6.0",
    "pytest-icdiff>=0.9",
    "pytest-mock>=3.15.1",
    "pytest-pspec>=0.0.4",
    "pytest-watcher>=0.6.2",
    "requests-mock>=1.12.1",
    "ruff>=0.14.4",
]

[tool.ruff]
select = [
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "D",      # pydocstyle
    "E", "W", # pycodestyle
    "F",      # pyflakes
    "I",      # isort
    "PL",     # pylint
    "PT",     # flake8-pytest-style
    "S",      # flake8-bandit
    "UP",     # pyupgrade
]

[tool.ruff.per-file-ignores]
"**_test.py" = ["D400"]

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
addopts = "--pspec"
python_files = "**_test.py"
